<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_title_img" />

    <Button
        android:id="@+id/exit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded"
        android:text="@string/exit"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded"
        android:text="@string/start"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/name_game"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />
</RelativeLayout>