<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="9"
            android:gravity="center"
            android:text="@string/select_character"
            android:textColor="@color/dark"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/some_time"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/dark"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/some_time"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/dark"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/some_time"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/dark"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_heart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_damage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_25"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_defense" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_money" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_10"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_heart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_130"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_damage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_15"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_defense" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_8"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_money" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_10"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_heart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_60"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_damage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_30"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_defense" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_10"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_money" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_30"
                    android:textColor="@color/dark"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_first_character"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:text="@string/select"
                android:textSize="23sp" />

            <Button
                android:id="@+id/select_second_character"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:text="@string/select"
                android:textSize="23sp" />

            <Button
                android:id="@+id/select_third_character"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:text="@string/select"
                android:textSize="23sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>